Fixed Spill

--- a/The Multimedia Terminal/WebContent/tmi.css
+++ b/The Multimedia Terminal/WebContent/tmi.css
@@ -441,6 +441,10 @@ div.recImg {
 	margin-right:10px;
 }
 
+.recImg img {
+	height:110px;
+}
+
 /*for review*/
 form#reviewForm {
 	font-size:1.5em;
